--- a/assets/stylesheets/pages/_results.scss
+++ b/assets/stylesheets/pages/_results.scss
@@ -476,6 +476,8 @@ $gauge-hand-height: 8px;
 
 	flex-grow: 1;
 
+	vertical-align: top;
+
 	&::before {
 		content: none;
 	}
@@ -498,8 +500,8 @@ $gauge-hand-height: 8px;
 .profile__buttons a {
 	width: auto;
 
-	margin-right: auto;
-	margin-left: auto;
+	margin-right: 0;
+	margin-left: 0;
 
 	text-align: center;
 	text-decoration: none;
